[All] Resolved some minior bugs